src/objects/Minimum_Income__c.object
<CustomObject>
    <description>Object holds the values for what&apos;s considered minimum income thresholds. This object is used strictly for back-end solutions built through custom code; not designed for front-end solutions.</description>
    <fields>
        <fullName>Annual_Income__c</fullName>
        <label>Annual Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Size__c</fullName>
        <label>Family Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Code__c</fullName>
        <description>Location code for Minimum Income thresholds</description>
        <label>Location Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_ID__c</fullName>
        <formula>TEXT(Family_Size__c)+&quot;_&quot;+Location_Code__c</formula>
        <label>Reference ID</label>
        <type>Text</type>
    </fields>
    <label>Minimum Income</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Description__c</columns>
        <columns>Fiscal_Year__c</columns>
        <columns>Family_Size__c</columns>
        <columns>Location_Code__c</columns>
        <columns>Annual_Income__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MI-{0000}</displayFormat>
        <label>Minimum Income Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Minimum Incomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>